--- a/package.json
+++ b/package.json
@@ -2,18 +2,30 @@
   "name": "truf-excel",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "npm run watch:css && next -p 5001",
+    "build": "npm run build:css && next build",
+    "start": "next start -p 5001",
+    "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+    "clean": "rm -rf node_modules",
+    "reinstall": "npm run clean && npm install",
+    "debug": "next -p 3002"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "next": "12.0.8",
+    "postcss-import": "^14.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-responsive-carousel": "^3.2.22"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "cross-env": "^7.0.3",
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "12.0.8",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
+    "tailwindcss": "^3.0.17"
   }
 }
