--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "truf-excel",
   "private": true,
+  "url": "https://turf-excel.web.app/",
   "scripts": {
     "dev": "npm run watch:css && next -p 5001",
     "build": "npm run build:css && next build",
@@ -9,10 +10,12 @@
     "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
     "clean": "rm -rf node_modules",
     "reinstall": "npm run clean && npm install",
-    "debug": "next -p 3002"
+    "debug": "next -p 5001",
+    "export": "next export"
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
+    "firebase": "^9.6.5",
     "next": "12.0.8",
     "postcss-import": "^14.0.2",
     "react": "17.0.2",
