--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 /.pnp
 .pnp.js
 
+# firebase
+firebase.json
+*.firebase
+*.firebaserc
+next.config.js
+
 # testing
 /coverage
 
@@ -33,8 +39,3 @@ yarn-error.log*
 # vercel
 .vercel
 
-
-# firebase
-firebase.json
-.firebase
-.firebaserc
