--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "firebase": "^9.6.5",
     "next": "12.0.8",
