--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean": "rm -rf node_modules",
     "reinstall": "npm run clean && npm install",
     "debug": "next -p 5001",
-    "export": "next export"
+    "export": "next export",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
@@ -21,6 +22,7 @@
     "postcss-import": "^14.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-responsive-carousel": "^3.2.22"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "cross-env": "^7.0.3",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "next-sitemap": "^2.4.3",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "tailwindcss": "^3.0.17"
